@@ -7,6 +7,7 @@
 	fixed genAS3 conflicting classes and interfaces
 	preserve neko output file extension
 	added flash.Event for Flash9
+	added --no-output
 
 2007-05-18: 1.13
 	fixed bug with local variable masking package in catch type
